// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should bundle for development mode 1`] = `
ReactSPABundle {
  "options": Array [
    Mode {
      "value": "development",
    },
    Context {
      "value": "<PROJECT_ROOT>/packages/webpack-bundle-react-spa/test/src",
    },
    Entry {
      "value": "entry",
    },
    Resolve {
      "value": Object {
        "extensions": Array [
          ".ts",
          ".tsx",
          ".js",
          ".jsx",
        ],
        "modules": Array [
          "node_modules",
          "<PROJECT_ROOT>/packages/webpack-bundle-react-spa/test/src",
        ],
      },
    },
    Output {
      "value": Object {
        "chunkFilename": "[hash:6]/chunks/[name].js",
        "filename": "[hash:6]/[name].js",
        "path": "<PROJECT_ROOT>/packages/webpack-bundle-react-spa/test/dist",
        "publicPath": "/",
      },
    },
    Module {
      "rules": Array [
        TypeScriptLoader {
          "value": Object {
            "loader": "ts-loader",
            "options": Object {
              "transpileOnly": true,
            },
            "test": /\\\\\\.tsx\\?\\$/,
          },
        },
        FileLoader {
          "value": Object {
            "loader": "file-loader",
            "options": Object {
              "name": "[hash].[ext]",
              "outputPath": "assets/",
            },
            "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\|svg\\|jpg\\|jpeg\\|png\\|gif\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
          },
        },
      ],
      "value": Object {
        "rules": Array [],
      },
    },
    ResolveLoader {
      "value": Object {
        "modules": Array [
          "<PROJECT_ROOT>/packages/webpack-bundle-react-spa/node_modules",
          "node_modules",
        ],
      },
    },
    BundleOptimization {
      "value": Object {
        "splitChunks": Object {
          "cacheGroups": Object {
            "vendor": Object {
              "chunks": "all",
              "name": "vendor",
              "priority": 0,
              "test": /\\\\/node_modules\\\\//,
            },
          },
        },
      },
    },
    DevServer {
      "value": Object {
        "compress": true,
        "contentBase": "<PROJECT_ROOT>/packages/webpack-bundle-react-spa/test/dist",
        "historyApiFallback": true,
        "hot": true,
        "port": 9000,
      },
    },
    Plugins {
      "value": Array [
        HtmlWebpackPlugin {
          "options": Object {
            "cache": true,
            "chunks": "all",
            "chunksSortMode": "auto",
            "compile": true,
            "excludeChunks": Array [],
            "favicon": false,
            "filename": "index.html",
            "hash": false,
            "inject": true,
            "meta": Object {},
            "minify": false,
            "showErrors": true,
            "template": "<PROJECT_ROOT>/node_modules/html-webpack-plugin/default_index.ejs",
            "templateParameters": [Function],
            "title": "Webpack App",
            "xhtml": false,
          },
        },
        HotModuleReplacementPlugin {
          "fullBuildTimeout": 200,
          "multiStep": undefined,
          "options": Object {},
          "requestTimeout": 10000,
        },
      ],
    },
  ],
}
`;

exports[`should bundle for production mode 1`] = `
ReactSPABundle {
  "options": Array [
    Mode {
      "value": "production",
    },
    Context {
      "value": "<PROJECT_ROOT>/packages/webpack-bundle-react-spa/test/src",
    },
    Entry {
      "value": "entry",
    },
    Resolve {
      "value": Object {
        "extensions": Array [
          ".ts",
          ".tsx",
          ".js",
          ".jsx",
        ],
        "modules": Array [
          "node_modules",
          "<PROJECT_ROOT>/packages/webpack-bundle-react-spa/test/src",
        ],
      },
    },
    Output {
      "value": Object {
        "chunkFilename": "[hash:6]/chunks/[name].js",
        "filename": "[hash:6]/[name].js",
        "path": "<PROJECT_ROOT>/packages/webpack-bundle-react-spa/test/dist",
        "publicPath": "/",
      },
    },
    Module {
      "rules": Array [
        TypeScriptLoader {
          "value": Object {
            "loader": "ts-loader",
            "options": Object {
              "transpileOnly": false,
            },
            "test": /\\\\\\.tsx\\?\\$/,
          },
        },
        FileLoader {
          "value": Object {
            "loader": "file-loader",
            "options": Object {
              "name": "[hash].[ext]",
              "outputPath": "assets/",
            },
            "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\|svg\\|jpg\\|jpeg\\|png\\|gif\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
          },
        },
      ],
      "value": Object {
        "rules": Array [],
      },
    },
    ResolveLoader {
      "value": Object {
        "modules": Array [
          "<PROJECT_ROOT>/packages/webpack-bundle-react-spa/node_modules",
          "node_modules",
        ],
      },
    },
    BundleOptimization {
      "value": Object {
        "splitChunks": Object {
          "cacheGroups": Object {
            "vendor": Object {
              "chunks": "all",
              "name": "vendor",
              "priority": 0,
              "test": /\\\\/node_modules\\\\//,
            },
          },
        },
      },
    },
    Plugins {
      "value": Array [
        HtmlWebpackPlugin {
          "options": Object {
            "cache": true,
            "chunks": "all",
            "chunksSortMode": "auto",
            "compile": true,
            "excludeChunks": Array [],
            "favicon": false,
            "filename": "index.html",
            "hash": false,
            "inject": true,
            "meta": Object {},
            "minify": false,
            "showErrors": true,
            "template": "<PROJECT_ROOT>/node_modules/html-webpack-plugin/default_index.ejs",
            "templateParameters": [Function],
            "title": "Webpack App",
            "xhtml": false,
          },
        },
      ],
    },
  ],
}
`;
